エラー修正とディレクトリ名の変更をしました。

--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -59,9 +59,9 @@ h3{
     color: #555;
 }
 
-.new li{
+.news__index{
     list-style-type: none;
-    border : solid color#;
+    border : solid ;
 }
 
 .menus{
