--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   box-shadow: 0 0 0 2px #cafbce;
   color: #0a8915;
   margin: 2em 0;
-  padding: 2em;
+  padding: 1em;
   margin-top: 0;
 }
 
@@ -109,7 +109,7 @@ h1 {
 }
 
 .index li a div:hover {
-  background-color: #fc0;
+  background-color: #fa0;
 }
 
 /* SideBar */
@@ -122,7 +122,7 @@ h1 {
   box-shadow: 0 0 0 2px #cafbce;
   color: #0a8915;
   margin: 2em 0;
-  padding: 2em;
+  padding: 1em;
   margin-top: 0;
 }
 
