--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 #footer {
     padding:50px 10px 5px;
-    background-color: #fc6;
-    color:#f30;
+    background-color: $border-bottom;
+    color:$color-buttn-base;
     clear: both;
 }
