--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,12 +1,15 @@
+.flame__gleen{
+    background-color: $color-box-shadow;
+    border: 2px solid $color-border-soloe;
+    box-shadow: 0 0 0 2px $color-box-shadow;
+    color: $color-green-fleam;
+    margin: 2em 0;
+    padding: 1em;
+    margin-top: 0;
+}
+
 .side{
     float:right;
     width: 300px;
     border:solid 1px;
-    background-color: #cafbce;
-    border: 2px solid #fff;
-    box-shadow: 0 0 0 2px #cafbce;
-    color: #0a8915;
-    margin: 2em 0;
-    padding: 1em;
-    margin-top: 0;
 }
