--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -1,7 +1,3 @@
-.left{
-    float: left;
-}
-
 .flame__gleen{
     background-color: $color-box-shadow;
     border: 2px solid $color-border-soloe;
@@ -10,6 +6,12 @@
     margin: 2em 0;
     padding: 1em;
     margin-top: 0;
+}
+
+.main_img{
+    width:1060px;
+    height:400px;
+    img:url
 }
 
 
@@ -25,17 +27,21 @@ body {
 
 h2 {
     border-bottom: 2px solid $border-bottom;
+    font-weight: bold;
+    line-height: normal;
 }
 
 h3{
-    padding-left: 40px;
+    padding-left: 15px;
+    font-weight:bold;
 }
 
 .content {
     background-color: $color-content-back;
     border:solid $color-content-solidline;
     border-radius: 10px;
-    overflow: hidden;
+    display: flex;
+    line-height:normal;
 }
 
 .aisatu{
@@ -51,7 +57,7 @@ h3{
     margin-bottom: 5px;
     padding: 10px 10px 0px;
     color: $color-base;
-    height: 300px;
+    height: 200px;
     width: 500px;
 }
 
@@ -65,7 +71,10 @@ h3{
 
 .news__index{
     list-style-type: none;
-    border : solid ;
+}
+
+.news__index p {
+    padding:15px;
 }
 
 .menus{
