--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,14 @@
-/*reset*/
-@import"common/reset";
+/* reset */
+@import "common/reset";
 
-/*valiables*/
-@import"common/valiables";
+/* fonts */
+@import "common/fonts";
 
-/*common*/
-@import"common/common";
+/* valiables */
+@import "common/valiables";
+
+/* common */
+@import "common/common";
 
 /* Header */
 @import "components/header";
