--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,15 @@
 
 /* Footer */
 @import "components/footer";
+
+/* Header img */
+@import "components/header_img";
+
+/* Main logo box */
+@import "components/main_logo_box";
+
+/* Content box list */
+@import "components/content_box_list";
+
+/* Background image box */
+@import "components/background_image_box";
