--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,3 +33,10 @@
 
 /* Background image box */
 @import "components/background_image_box";
+
+/* Cotegory box list*/
+@import "components/_cotegory_box_list";
+
+/* Cotegory box*/
+@import "components/_cotegory_box";
+
