--- a/sass/components/_cotegory_box.scss
+++ b/sass/components/_cotegory_box.scss
@@ -1,16 +1,20 @@
 .CategoryBox{
     &__head{
-        display:flex;
+        display: flex;
         justify-content: center;
-        font-size:3.4vw;
+        font-size: 4.4vw;
         font-family: 'Lora', serif;
         opacity: 0.8;
     }
     &__body{
+        display: flex;
+        justify-content: space-between;
         border-radius: 50%;
-        width: 390px;
-        height: 340px;
-        padding: 20px 20px 20px 30px;
+        margin: 20px auto;
+        overflow: hidden;
+        width: 33vw;
+        height: 33vw;
+        position: relative;
     }
     &__foot{
         display: flex;
