--- a/sass/components/_cotegory_box_list.scss
+++ b/sass/components/_cotegory_box_list.scss
@@ -1,7 +1,8 @@
 .CategoryBoxList {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     &__item {
-        
+        width: 650px;
     }
 }
