--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,8 +35,8 @@
 @import "components/background_image_box";
 
 /* Cotegory box list*/
-@import "components/_cotegory_box_list";
+@import "components/cotegory_box_list";
 
 /* Cotegory box*/
-@import "components/_cotegory_box";
+@import "components/cotegory_box";
 
